# api/api.gen.go
@@ -12,6 +12,14 @@ import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
+// Metric defines model for Metric.
+type Metric struct {
+	Cpu    *string `json:"cpu,omitempty"`
+	Mem    *int    `json:"mem,omitempty"`
+	Ram    *string `json:"ram,omitempty"`
+	Uptime *int    `json:"uptime,omitempty"`
+}
+
 // Server defines model for Server.
 type Server struct {
 	// Cpu core
@@ -57,6 +65,9 @@ type ServerInterface interface {
 	// (POST /auth/signup)
 	SignUp(ctx echo.Context) error
 
+	// (GET /metrics/{server_id})
+	GetServerMetrics(ctx echo.Context, serverId openapi_types.UUID) error
+
 	// (DELETE /rent/{server_id})
 	UnRentServer(ctx echo.Context, serverId openapi_types.UUID) error
 
@@ -99,6 +110,22 @@ func (w *ServerInterfaceWrapper) SignUp(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.SignUp(ctx)
+	return err
+}
+
+// GetServerMetrics converts echo context to params.
+func (w *ServerInterfaceWrapper) GetServerMetrics(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "server_id" -------------
+	var serverId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "server_id", ctx.Param("server_id"), &serverId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter server_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetServerMetrics(ctx, serverId)
 	return err
 }
 
@@ -183,6 +210,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/auth/signin", wrapper.SignIn)
 	router.GET(baseURL+"/auth/signout", wrapper.SignOut)
 	router.POST(baseURL+"/auth/signup", wrapper.SignUp)
+	router.GET(baseURL+"/metrics/:server_id", wrapper.GetServerMetrics)
 	router.DELETE(baseURL+"/rent/:server_id", wrapper.UnRentServer)
 	router.POST(baseURL+"/rent/:server_id", wrapper.RentServer)
 	router.GET(baseURL+"/servers/available", wrapper.GetAvailableServers)
