# internal/model/model.go
@@ -1,6 +1,10 @@
 package model
 
-import "github.com/google/uuid"
+import (
+	"github.com/google/uuid"
+
+	vm "machineIssuerSystem/internal/virtualmachine"
+)
 
 type Product struct {
 	ID          uuid.UUID
@@ -18,4 +22,20 @@ type Server struct {
 	Disk   int
 	RentBy *uuid.UUID
 	IP     string
+}
+
+type Metric struct {
+	Uptime int64
+	CPU    float64
+	RAM    float64
+	Memory int64
+}
+
+func FromPkgToDomain(req vm.Metrics) Metric {
+	return Metric{
+		Uptime: req.Uptime,
+		CPU:    req.CPU,
+		RAM:    req.RAM,
+		Memory: req.MEM,
+	}
 }
